--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         لاستعراض الحوادث المتعلقة بالآثار المصرية خلال السنوات القليلة الماضية وبحث سبل التعاون 
         
     </p>
-    <img src ="_100919277_a1b39189-2694-469f-a43b-05004a80a2ef.jpg" alt="Description of the image" height="300">
+    <img src ="image.jpg" alt="Description of the image" height="300">
 </body>
 </html>
