--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         لاستعراض الحوادث المتعلقة بالآثار المصرية خلال السنوات القليلة الماضية وبحث سبل التعاون 
         
     </p>
-    <img src ="image.jpg" alt="Description of the image" height="300">
+    <img src ="./image.jpg" alt="Description of the image" height="300">
 </body>
 </html>
